--- a/config/database.yml
+++ b/config/database.yml
@@ -12,10 +12,10 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: EPM_development
+  database: epm
   pool: 5
-  username: root
-  password:
+  username: epmer
+  password: epmer
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
