--- a/config/database.yml
+++ b/config/database.yml
@@ -27,16 +27,16 @@ test:
   reconnect: false
   database: EPM_test
   pool: 5
-  username: root
-  password:
+  username: epmer
+  password: epmer
   socket: /var/run/mysqld/mysqld.sock
 
 production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: EPM_production
+  database: epm
   pool: 5
-  username: root
-  password:
+  username: epmer
+  password: epmer
   socket: /var/run/mysqld/mysqld.sock
