--- a/config/database.yml
+++ b/config/database.yml
@@ -12,10 +12,10 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: IFEpm_development
+  database: epmdb
   pool: 5
-  username: root
-  password:
+  username: epmer
+  password: epmer@
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -25,18 +25,18 @@ test:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: IFEpm_test
+  database: epmdb_test
   pool: 5
-  username: root
-  password:
+  username: epmer
+  password: epmer@
   socket: /var/run/mysqld/mysqld.sock
 
 production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: IFEpm_production
+  database: epmdb
   pool: 5
-  username: root
-  password:
+  username: epmer
+  password: epmer@
   socket: /var/run/mysqld/mysqld.sock
