--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
  pool: 5
  username: epmer
  password: epmer@
- socket: /var/run/mysqld/mysqld.sock
+ socket: /tmp/mysql.sock
  # socket: /tmp/mysql.sock
 #
 #
