--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
  pool: 5
  username: epmer
  password: epmer@
- socket: /tmp/mysql.sock
+ socket: /var/run/mysqld/mysqld.sock
  # socket: /tmp/mysql.sock
 #
 #
@@ -28,7 +28,7 @@ test:
  adapter: mysql2
  encoding: utf8
  reconnect: false
- database: epmdb_test
+ database: epmdb
  pool: 5
  username: epmer
  password: epmer@
