--- a/test/fixtures/kpi_entries.yml
+++ b/test/fixtures/kpi_entries.yml
@@ -1,11 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
-  entry_at: 2013-07-01 16:54:53
-  entry_frequency: 1
-  user_kpi: 
+one: {}
 
-two:
-  entry_at: 2013-07-01 16:54:53
-  entry_frequency: 1
-  user_kpi: 
+two: {}
