--- a/test/fixtures/kpis.yml
+++ b/test/fixtures/kpis.yml
@@ -1,23 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
-  name: MyString
-  description: MyString
-  kpi_category: 
-  unit: 1
-  entry_frequency: 1
-  target: 1.5
-  is_calculated: false
-  desired_direction: 1
-  kpi_period: 1
+one: {}
 
-two:
-  name: MyString
-  description: MyString
-  kpi_category: 
-  unit: 1
-  entry_frequency: 1
-  target: 1.5
-  is_calculated: false
-  desired_direction: 1
-  kpi_period: 1
+two: {}
