--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,27 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-cz_user1:
-  role_id: 1
-  first_name: user1
-  last_name: CZ
-  email: song.wang@cz-tek.com
-  password: 
-  salt: 
-  remember_token: 
-  remember_token_expires_at: 
-  status: 1
-  is_tenant: true
-  tenant: cz
+cz_user1: {}
 
-apple_user1:
-  role_id: 1
-  first_name: user1 
-  last_name: Apple
-  email: iwangsong@163.com
-  password: 
-  salt: 
-  remember_token: 
-  remember_token_expires_at: 
-  status: 1
-  is_tenant: true
-  tenant: apple
+apple_user1: {}
