--- a/config/database.yml
+++ b/config/database.yml
@@ -28,7 +28,7 @@ test:
  adapter: mysql2
  encoding: utf8
  reconnect: false
- database: epmdb
+ database: test_epmdb
  pool: 5
  username: epmer
  password: epmer@
