--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
  pool: 5
  username: epmer
  password: epmer@
- socket: /var/run/mysqld/mysqld.socket
+ socket: /var/run/mysqld/mysqld.sock
 ##socket: /tmp/mysql.sock
 #
 
@@ -30,7 +30,7 @@ test:
  adapter: mysql2
  encoding: utf8
  reconnect: false
- database: test_epmdb
+ database: epmdb
  pool: 5
  username: epmer
  password: epmer@
