--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,16 @@ production:
  password: epmer@
  socket: /var/run/mysqld/mysqld.sock
 
-
+##
+performance:
+ adapter: mysql2
+ encoding: utf8
+ reconnect: false
+ database: epmdb
+ pool: 5
+ username: epmer
+ password: epmer@
+ socket: /var/run/mysqld/mysqld.sock
 # development:
     # adapter: sqlite3
     # database: db/development.sqlite3
