--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,3 +8,4 @@ path:
  :updata_file_path: 'uploadfiles/data'
  :download_file_path: 'uploadfiles/download'
  :template_file_path: 'uploadfiles/template'
+ :avatar_file_path: 'uploadfiles/avatar'
