--- a/config/database_wz.yml
+++ b/config/database_wz.yml
@@ -38,7 +38,7 @@ test:
  socket: /tmp/mysql.sock
 
 ##
-production:             ß
+production:
  adapter: mysql2
  encoding: utf8
  reconnect: false
