--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 /.project
 /uploadfiles/data/*.csv
 /uploadfiles/download/*.csv
-/uploadfiles/*
+/uploadfiles/**/*
 !/uploadfiles/**/*.ignore
 !/uploadfiles/template/*
 .DS_Store
