--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,3 +12,5 @@ path:
  :kpi_entry_file_path: 'uploadfiles/kpi_entry'
  :avatar_file_path: 'uploadfiles/avatar'
  :email_file_path: 'uploadfiles/emails'
+ :attach_tmp_path: 'uploadfiles/attach/tmp'
+ :attach_path: 'uploadfiles/attach/uped'
