--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
  adapter: mysql2
  encoding: utf8
  reconnect: false
- database: epmdemo
+ database: epmdb
  pool: 5
  username: epmer
  password: epmer@
@@ -42,7 +42,7 @@ production:
  adapter: mysql2
  encoding: utf8
  reconnect: false
- database: epmdemo
+ database: epmdb
  pool: 5
  username: epmer
  password: epmer@
