--- a/config/database.yml
+++ b/config/database.yml
@@ -30,7 +30,7 @@ test:
  adapter: mysql2
  encoding: utf8
  reconnect: false
- database: epmdb_test
+ database: epmdb
  pool: 5
  username: epmer
  password: epmer@
