--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -69,7 +69,7 @@ development:
 test:
   sessions:
     default:
-      database: if_epm_test
+      database: epmdb
       hosts:
         - localhost:27017
       options:
