--- a/config/database.yml
+++ b/config/database.yml
@@ -78,6 +78,15 @@ demo_cn:
   username: epmer
   password: epmer@
   socket: /var/run/mysqld/mysqld.sock
+jiangnan:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: epmdb_jiangnan
+  pool: 5
+  username: epmer
+  password: epmer@
+  socket: /var/run/mysqld/mysqld.sock
 #
 #development:
   #adapter: sqlite3
