--- a/test/fixtures/report_snaps.yml
+++ b/test/fixtures/report_snaps.yml
@@ -3,6 +3,7 @@
 one:
   desc: MyString
   type: 1
+  type_string: MyString
   user: 
   data: MyText
   tenant: 
@@ -10,6 +11,7 @@ one:
 two:
   desc: MyString
   type: 1
+  type_string: MyString
   user: 
   data: MyText
   tenant: 
