--- a/config/requirejs.yml
+++ b/config/requirejs.yml
@@ -14,6 +14,7 @@ paths:
    bootstrap.datepicker: "libs/bootstrap-datepicker"
    datepicker: "func-module/datepicker"
    jquery.fileupload: "libs/jquery.fileupload"
+   jquery.ui.widget: "libs/jquery.ui.widget"
 shim:
    chart:
       exports: "Chart"
@@ -36,5 +37,5 @@ shim:
       deps: ["jquery"]
       exports: "jQuery.fn.datepicker"
    jquery.fileupload:
-      deps: ["jquery"]
+      deps: ["jquery",jquery.ui.widget]
       exports: "jQuery.fn.fileupload"
