--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -7,7 +7,8 @@
 # Set timeout to 8 on Heroku, longer if you manage your own systems.
 :timeout: 30
 :queues:
-  - [default, 5]
-  - [email, 7]
-  - [kpicaljob,7]
-  - [kpicreatejob,7]
+  - [default, 1]
+  - [email, 2]
+  - [kpicaljob,4]
+  - [kpicreatejob,4]
+  - [flag,2]
