--- a/config/database.yml
+++ b/config/database.yml
@@ -87,24 +87,13 @@ jiangnan:
   username: epmer
   password: epmer@
   socket: /var/run/mysqld/mysqld.sock
-#
-#development:
-  #adapter: sqlite3
-  #database: db/development.sqlite3
-  #pool: 5
-  #timeout: 5000
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-#test:
-  #adapter: sqlite3
-  #database: db/test.sqlite3
-  #pool: 5
-  #timeout: 5000
-
-#production:
-  #adapter: sqlite3
-  #database: db/production.sqlite3
-  #pool: 5
-  #timeout: 5000
+local:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: epmdb
+  pool: 25
+  username: epmer
+  password: epmer@
+  socket: /var/run/mysqld/mysqld.sock
