--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ development:
  pool: 25
  username: epmer
  password: epmer@
-# socket: /var/run/mysqld/mysqld.sock
- socket: /tmp/mysql.sock
+ socket: /var/run/mysqld/mysqld.sock
+# socket: /tmp/mysql.sock
 #
 
 
