--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,6 @@
 development:
    server:
-     host: 192.168.1.101:3000
+     host: 192.168.1.12:3000
    app:
      id: clearinsight
-     kpi: 工作时间
+     kpi: WorkingTime
